--- a/test/buster.html
+++ b/test/buster.html
@@ -44,6 +44,7 @@
         }
     }
 
+    /*
     (function () {
         // httpCode: 200
         do_xhr("/", function () {
@@ -53,5 +54,8 @@
             });
         });
     }());
+    */
+    console.log( logger(document) );
+    console.log( logger(window) );
 
 </script>
