add space for object

--- a/test/buster.html
+++ b/test/buster.html
@@ -8,7 +8,7 @@
     <ul>
         <li><a href="#">
             <span>
-                <img src="http://www.google.com/logo.png" alt="Logo Google" />
+                <img src="http://beerhold.it/20/20" alt="Logo Google" />
             </span>
         </a></li>
     </ul>
